# PlayReadingAssistant

./: .gitignore  Cargo.toml  README.md  db-setup.sql  package-lock.json  package.json  server.js  webpack.config.js
server/: playData.js  server.js
src/: actorRepository.js  actors.rs  lib.rs  main.rs  scriptRepository.js
tests/common/: mod.rs
views/: base.mustache  home.mustache  script.mustache  scriptNav.mustache
